--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Site settings
-title: Willian Justen - Desenvolvedor Front End
-description: A blog about lorem ipsum dolor sit amet
-baseurl: "/cards-jekyll-template" # the subpath of your site, e.g. /blog
-url: "https://willianjusten.com.br" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+title: Modern architectures
+description: Java, Angular, React
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://javaee.ch"
 
 # User settings
-username: Lorem Ipsum
-user_description: Anon Developer at Lorem Ipsum Dolor
-email: anon@anon.com
-twitter_username: lorem_ipsum
-github_username:  lorem_ipsum
+username: marco
+user_description: Marco freelance architect and developer
+email: moltenma@gmail.com
+twitter_username: marcomolteni
+github_username:  marco76
 gplus_username:  lorem_ipsum
 disqus_username: lorem_ipsum
 
