--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ email: moltenma@gmail.com
 twitter_username: marcomolteni
 github_username:  marco76
 gplus_username:  lorem_ipsum
-disqus_username: lorem_ipsum
+disqus_username: disqus_A4h38613IE
 
 # Build settings
 markdown: kramdown
