--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ title: Modern architectures
 description: Java, Angular, React
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://javaee.ch"
+repository_url: "https://github.com/marco76/marco76.github.io/blob/master/"
 
 warning: "July 2017: Migration from Wordpress to Jekyll. Work in progress. Possible temporary issues."
 
