--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://javaee.ch"
 repository_url: "https://github.com/marco76/marco76.github.io/blob/master/"
 
-warning: "July 2017: Migration from Wordpress to Jekyll. Work in progress. Possible temporary issues."
-
+warning: "July 2017: Migration from Wordpress to Jekyll. Possible issues. The comments are not migrated"
+news: "New tutorials apps! Spring Boot and Angular Material: [molteni.io](http://molteni.io) and Java EE 8, Angular and Bootstrap : [javademo.io](http://javademo.io)"
 # User settings
 username: marco
 user_description: Marco freelance architect and developer
