--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "http://javaee.ch"
 repository_url: "https://github.com/marco76/marco76.github.io/blob/master/"
 
 warning: "July 2017: Migration from Wordpress to Jekyll. Possible issues. The comments are not migrated"
-news: "New tutorials apps! Spring Boot and Angular Material: [molteni.io](http://molteni.io) and Java EE 8, Angular and Bootstrap : [javademo.io](http://javademo.io)"
+news: "New tutorials apps! Java, Angular and Bootstrap : [javademo.io](http://javademo.io)"
 # User settings
 username: marco
 user_description: Marco freelance architect and developer
