--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Modern architectures
+title: Java and Angular in the Cloud
 description: Java and Angular
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://javaee.ch"
