--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,7 @@
+# http and https need separate rules if you don't force_ssl!
+http://javaee.ch/* https://marco.dev/* 301!
+https://javaee.ch/* https://marco.dev/* 301!
+
 [[redirects]]
   from = "/java-angular-setup"
   to = "https://marco.dev/java-angular-setup"
